tests/spectest/simd_align.bin.wast
(module definition binary
  "\00\61\73\6d\01\00\00\00\01\84\80\80\80\00\01\60"
  "\00\00\03\82\80\80\80\00\01\00\05\83\80\80\80\00"
  "\01\00\01\0a\8f\80\80\80\00\01\89\80\80\80\00\00"
  "\41\00\fd\00\00\00\1a\0b"
)
(module instance)
(module definition binary
  "\00\61\73\6d\01\00\00\00\01\84\80\80\80\00\01\60"
  "\00\00\03\82\80\80\80\00\01\00\05\83\80\80\80\00"
  "\01\00\01\0a\8f\80\80\80\00\01\89\80\80\80\00\00"
  "\41\00\fd\00\01\00\1a\0b"
)
(module instance)
(module definition binary
  "\00\61\73\6d\01\00\00\00\01\84\80\80\80\00\01\60"
  "\00\00\03\82\80\80\80\00\01\00\05\83\80\80\80\00"
  "\01\00\01\0a\8f\80\80\80\00\01\89\80\80\80\00\00"
  "\41\00\fd\00\02\00\1a\0b"
)
(module instance)
(module definition binary
  "\00\61\73\6d\01\00\00\00\01\84\80\80\80\00\01\60"
  "\00\00\03\82\80\80\80\00\01\00\05\83\80\80\80\00"
  "\01\00\01\0a\8f\80\80\80\00\01\89\80\80\80\00\00"
  "\41\00\fd\00\03\00\1a\0b"
)
(module instance)
(module definition binary
  "\00\61\73\6d\01\00\00\00\01\84\80\80\80\00\01\60"
  "\00\00\03\82\80\80\80\00\01\00\05\83\80\80\80\00"
  "\01\00\01\0a\8f\80\80\80\00\01\89\80\80\80\00\00"
  "\41\00\fd\00\04\00\1a\0b"
)
(module instance)
(module definition binary
  "\00\61\73\6d\01\00\00\00\01\84\80\80\80\00\01\60"
  "\00\00\03\82\80\80\80\00\01\00\05\83\80\80\80\00"
  "\01\00\01\0a\a0\80\80\80\00\01\9a\80\80\80\00\00"
  "\41\00\fd\0c\00\00\00\00\01\00\00\00\02\00\00\00"
  "\03\00\00\00\fd\0b\00\00\0b"
)
(module instance)
(module definition binary
  "\00\61\73\6d\01\00\00\00\01\84\80\80\80\00\01\60"
  "\00\00\03\82\80\80\80\00\01\00\05\83\80\80\80\00"
  "\01\00\01\0a\a0\80\80\80\00\01\9a\80\80\80\00\00"
  "\41\00\fd\0c\00\00\00\00\01\00\00\00\02\00\00\00"
  "\03\00\00\00\fd\0b\01\00\0b"
)
(module instance)
(module definition binary
  "\00\61\73\6d\01\00\00\00\01\84\80\80\80\00\01\60"
  "\00\00\03\82\80\80\80\00\01\00\05\83\80\80\80\00"
  "\01\00\01\0a\a0\80\80\80\00\01\9a\80\80\80\00\00"
  "\41\00\fd\0c\00\00\00\00\01\00\00\00\02\00\00\00"
  "\03\00\00\00\fd\0b\02\00\0b"
)
(module instance)
(module definition binary
  "\00\61\73\6d\01\00\00\00\01\84\80\80\80\00\01\60"
  "\00\00\03\82\80\80\80\00\01\00\05\83\80\80\80\00"
  "\01\00\01\0a\a0\80\80\80\00\01\9a\80\80\80\00\00"
  "\41\00\fd\0c\00\00\00\00\01\00\00\00\02\00\00\00"
  "\03\00\00\00\fd\0b\03\00\0b"
)
(module instance)
(module definition binary
  "\00\61\73\6d\01\00\00\00\01\84\80\80\80\00\01\60"
  "\00\00\03\82\80\80\80\00\01\00\05\83\80\80\80\00"
  "\01\00\01\0a\a0\80\80\80\00\01\9a\80\80\80\00\00"
  "\41\00\fd\0c\00\00\00\00\01\00\00\00\02\00\00\00"
  "\03\00\00\00\fd\0b\04\00\0b"
)
(module instance)
(module definition binary
  "\00\61\73\6d\01\00\00\00\01\84\80\80\80\00\01\60"
  "\00\00\03\82\80\80\80\00\01\00\05\83\80\80\80\00"
  "\01\00\01\0a\8f\80\80\80\00\01\89\80\80\80\00\00"
  "\41\00\fd\01\00\00\1a\0b"
)
(module instance)
(module definition binary
  "\00\61\73\6d\01\00\00\00\01\84\80\80\80\00\01\60"
  "\00\00\03\82\80\80\80\00\01\00\05\83\80\80\80\00"
  "\01\00\01\0a\8f\80\80\80\00\01\89\80\80\80\00\00"
  "\41\00\fd\01\01\00\1a\0b"
)
(module instance)
(module definition binary
  "\00\61\73\6d\01\00\00\00\01\84\80\80\80\00\01\60"
  "\00\00\03\82\80\80\80\00\01\00\05\83\80\80\80\00"
  "\01\00\01\0a\8f\80\80\80\00\01\89\80\80\80\00\00"
  "\41\00\fd\01\02\00\1a\0b"
)
(module instance)
(module definition binary
  "\00\61\73\6d\01\00\00\00\01\84\80\80\80\00\01\60"
  "\00\00\03\82\80\80\80\00\01\00\05\83\80\80\80\00"
  "\01\00\01\0a\8f\80\80\80\00\01\89\80\80\80\00\00"
  "\41\00\fd\01\03\00\1a\0b"
)
(module instance)
(module definition binary
  "\00\61\73\6d\01\00\00\00\01\84\80\80\80\00\01\60"
  "\00\00\03\82\80\80\80\00\01\00\05\83\80\80\80\00"
  "\01\00\01\0a\8f\80\80\80\00\01\89\80\80\80\00\00"
  "\41\00\fd\02\00\00\1a\0b"
)
(module instance)
(module definition binary
  "\00\61\73\6d\01\00\00\00\01\84\80\80\80\00\01\60"
  "\00\00\03\82\80\80\80\00\01\00\05\83\80\80\80\00"
  "\01\00\01\0a\8f\80\80\80\00\01\89\80\80\80\00\00"
  "\41\00\fd\02\01\00\1a\0b"
)
(module instance)
(module definition binary
  "\00\61\73\6d\01\00\00\00\01\84\80\80\80\00\01\60"
  "\00\00\03\82\80\80\80\00\01\00\05\83\80\80\80\00"
  "\01\00\01\0a\8f\80\80\80\00\01\89\80\80\80\00\00"
  "\41\00\fd\02\02\00\1a\0b"
)
(module instance)
(module definition binary
  "\00\61\73\6d\01\00\00\00\01\84\80\80\80\00\01\60"
  "\00\00\03\82\80\80\80\00\01\00\05\83\80\80\80\00"
  "\01\00\01\0a\8f\80\80\80\00\01\89\80\80\80\00\00"
  "\41\00\fd\02\03\00\1a\0b"
)
(module instance)
(module definition binary
  "\00\61\73\6d\01\00\00\00\01\84\80\80\80\00\01\60"
  "\00\00\03\82\80\80\80\00\01\00\05\83\80\80\80\00"
  "\01\00\01\0a\8f\80\80\80\00\01\89\80\80\80\00\00"
  "\41\00\fd\03\00\00\1a\0b"
)
(module instance)
(module definition binary
  "\00\61\73\6d\01\00\00\00\01\84\80\80\80\00\01\60"
  "\00\00\03\82\80\80\80\00\01\00\05\83\80\80\80\00"
  "\01\00\01\0a\8f\80\80\80\00\01\89\80\80\80\00\00"
  "\41\00\fd\03\01\00\1a\0b"
)
(module instance)
(module definition binary
  "\00\61\73\6d\01\00\00\00\01\84\80\80\80\00\01\60"
  "\00\00\03\82\80\80\80\00\01\00\05\83\80\80\80\00"
  "\01\00\01\0a\8f\80\80\80\00\01\89\80\80\80\00\00"
  "\41\00\fd\03\02\00\1a\0b"
)
(module instance)
(module definition binary
  "\00\61\73\6d\01\00\00\00\01\84\80\80\80\00\01\60"
  "\00\00\03\82\80\80\80\00\01\00\05\83\80\80\80\00"
  "\01\00\01\0a\8f\80\80\80\00\01\89\80\80\80\00\00"
  "\41\00\fd\03\03\00\1a\0b"
)
(module instance)
(module definition binary
  "\00\61\73\6d\01\00\00\00\01\84\80\80\80\00\01\60"
  "\00\00\03\82\80\80\80\00\01\00\05\83\80\80\80\00"
  "\01\00\01\0a\8f\80\80\80\00\01\89\80\80\80\00\00"
  "\41\00\fd\04\00\00\1a\0b"
)
(module instance)
(module definition binary
  "\00\61\73\6d\01\00\00\00\01\84\80\80\80\00\01\60"
  "\00\00\03\82\80\80\80\00\01\00\05\83\80\80\80\00"
  "\01\00\01\0a\8f\80\80\80\00\01\89\80\80\80\00\00"
  "\41\00\fd\04\01\00\1a\0b"
)
(module instance)
(module definition binary
  "\00\61\73\6d\01\00\00\00\01\84\80\80\80\00\01\60"
  "\00\00\03\82\80\80\80\00\01\00\05\83\80\80\80\00"
  "\01\00\01\0a\8f\80\80\80\00\01\89\80\80\80\00\00"
  "\41\00\fd\04\02\00\1a\0b"
)
(module instance)
(module definition binary
  "\00\61\73\6d\01\00\00\00\01\84\80\80\80\00\01\60"
  "\00\00\03\82\80\80\80\00\01\00\05\83\80\80\80\00"
  "\01\00\01\0a\8f\80\80\80\00\01\89\80\80\80\00\00"
  "\41\00\fd\04\03\00\1a\0b"
)
(module instance)
(module definition binary
  "\00\61\73\6d\01\00\00\00\01\84\80\80\80\00\01\60"
  "\00\00\03\82\80\80\80\00\01\00\05\83\80\80\80\00"
  "\01\00\01\0a\8f\80\80\80\00\01\89\80\80\80\00\00"
  "\41\00\fd\05\00\00\1a\0b"
)
(module instance)
(module definition binary
  "\00\61\73\6d\01\00\00\00\01\84\80\80\80\00\01\60"
  "\00\00\03\82\80\80\80\00\01\00\05\83\80\80\80\00"
  "\01\00\01\0a\8f\80\80\80\00\01\89\80\80\80\00\00"
  "\41\00\fd\05\01\00\1a\0b"
)
(module instance)
(module definition binary
  "\00\61\73\6d\01\00\00\00\01\84\80\80\80\00\01\60"
  "\00\00\03\82\80\80\80\00\01\00\05\83\80\80\80\00"
  "\01\00\01\0a\8f\80\80\80\00\01\89\80\80\80\00\00"
  "\41\00\fd\05\02\00\1a\0b"
)
(module instance)
(module definition binary
  "\00\61\73\6d\01\00\00\00\01\84\80\80\80\00\01\60"
  "\00\00\03\82\80\80\80\00\01\00\05\83\80\80\80\00"
  "\01\00\01\0a\8f\80\80\80\00\01\89\80\80\80\00\00"
  "\41\00\fd\05\03\00\1a\0b"
)
(module instance)
(module definition binary
  "\00\61\73\6d\01\00\00\00\01\84\80\80\80\00\01\60"
  "\00\00\03\82\80\80\80\00\01\00\05\83\80\80\80\00"
  "\01\00\01\0a\8f\80\80\80\00\01\89\80\80\80\00\00"
  "\41\00\fd\06\00\00\1a\0b"
)
(module instance)
(module definition binary
  "\00\61\73\6d\01\00\00\00\01\84\80\80\80\00\01\60"
  "\00\00\03\82\80\80\80\00\01\00\05\83\80\80\80\00"
  "\01\00\01\0a\8f\80\80\80\00\01\89\80\80\80\00\00"
  "\41\00\fd\06\01\00\1a\0b"
)
(module instance)
(module definition binary
  "\00\61\73\6d\01\00\00\00\01\84\80\80\80\00\01\60"
  "\00\00\03\82\80\80\80\00\01\00\05\83\80\80\80\00"
  "\01\00\01\0a\8f\80\80\80\00\01\89\80\80\80\00\00"
  "\41\00\fd\06\02\00\1a\0b"
)
(module instance)
(module definition binary
  "\00\61\73\6d\01\00\00\00\01\84\80\80\80\00\01\60"
  "\00\00\03\82\80\80\80\00\01\00\05\83\80\80\80\00"
  "\01\00\01\0a\8f\80\80\80\00\01\89\80\80\80\00\00"
  "\41\00\fd\06\03\00\1a\0b"
)
(module instance)
(module definition binary
  "\00\61\73\6d\01\00\00\00\01\84\80\80\80\00\01\60"
  "\00\00\03\82\80\80\80\00\01\00\05\83\80\80\80\00"
  "\01\00\01\0a\8f\80\80\80\00\01\89\80\80\80\00\00"
  "\41\00\fd\07\00\00\1a\0b"
)
(module instance)
(module definition binary
  "\00\61\73\6d\01\00\00\00\01\84\80\80\80\00\01\60"
  "\00\00\03\82\80\80\80\00\01\00\05\83\80\80\80\00"
  "\01\00\01\0a\8f\80\80\80\00\01\89\80\80\80\00\00"
  "\41\00\fd\08\00\00\1a\0b"
)
(module instance)
(module definition binary
  "\00\61\73\6d\01\00\00\00\01\84\80\80\80\00\01\60"
  "\00\00\03\82\80\80\80\00\01\00\05\83\80\80\80\00"
  "\01\00\01\0a\8f\80\80\80\00\01\89\80\80\80\00\00"
  "\41\00\fd\08\01\00\1a\0b"
)
(module instance)
(module definition binary
  "\00\61\73\6d\01\00\00\00\01\84\80\80\80\00\01\60"
  "\00\00\03\82\80\80\80\00\01\00\05\83\80\80\80\00"
  "\01\00\01\0a\8f\80\80\80\00\01\89\80\80\80\00\00"
  "\41\00\fd\09\00\00\1a\0b"
)
(module instance)
(module definition binary
  "\00\61\73\6d\01\00\00\00\01\84\80\80\80\00\01\60"
  "\00\00\03\82\80\80\80\00\01\00\05\83\80\80\80\00"
  "\01\00\01\0a\8f\80\80\80\00\01\89\80\80\80\00\00"
  "\41\00\fd\09\01\00\1a\0b"
)
(module instance)
(module definition binary
  "\00\61\73\6d\01\00\00\00\01\84\80\80\80\00\01\60"
  "\00\00\03\82\80\80\80\00\01\00\05\83\80\80\80\00"
  "\01\00\01\0a\8f\80\80\80\00\01\89\80\80\80\00\00"
  "\41\00\fd\09\02\00\1a\0b"
)
(module instance)
(module definition binary
  "\00\61\73\6d\01\00\00\00\01\84\80\80\80\00\01\60"
  "\00\00\03\82\80\80\80\00\01\00\05\83\80\80\80\00"
  "\01\00\01\0a\8f\80\80\80\00\01\89\80\80\80\00\00"
  "\41\00\fd\0a\00\00\1a\0b"
)
(module instance)
(module definition binary
  "\00\61\73\6d\01\00\00\00\01\84\80\80\80\00\01\60"
  "\00\00\03\82\80\80\80\00\01\00\05\83\80\80\80\00"
  "\01\00\01\0a\8f\80\80\80\00\01\89\80\80\80\00\00"
  "\41\00\fd\0a\01\00\1a\0b"
)
(module instance)
(module definition binary
  "\00\61\73\6d\01\00\00\00\01\84\80\80\80\00\01\60"
  "\00\00\03\82\80\80\80\00\01\00\05\83\80\80\80\00"
  "\01\00\01\0a\8f\80\80\80\00\01\89\80\80\80\00\00"
  "\41\00\fd\0a\02\00\1a\0b"
)
(module instance)
(module definition binary
  "\00\61\73\6d\01\00\00\00\01\84\80\80\80\00\01\60"
  "\00\00\03\82\80\80\80\00\01\00\05\83\80\80\80\00"
  "\01\00\01\0a\8f\80\80\80\00\01\89\80\80\80\00\00"
  "\41\00\fd\0a\03\00\1a\0b"
)
(module instance)
(assert_invalid
  (module binary
    "\00\61\73\6d\01\00\00\00\01\84\80\80\80\00\01\60"
    "\00\00\03\82\80\80\80\00\01\00\05\83\80\80\80\00"
    "\01\00\01\0a\8f\80\80\80\00\01\89\80\80\80\00\00"
    "\41\00\fd\00\05\00\1a\0b"
  )
  "alignment must not be larger than natural"
)
(assert_invalid
  (module binary
    "\00\61\73\6d\01\00\00\00\01\84\80\80\80\00\01\60"
    "\00\00\03\82\80\80\80\00\01\00\05\83\80\80\80\00"
    "\01\00\00\0a\a0\80\80\80\00\01\9a\80\80\80\00\00"
    "\41\00\fd\0c\00\00\00\00\00\00\00\00\00\00\00\00"
    "\00\00\00\00\fd\0b\05\00\0b"
  )
  "alignment must not be larger than natural"
)
(assert_invalid
  (module binary
    "\00\61\73\6d\01\00\00\00\01\85\80\80\80\00\01\60"
    "\00\01\7b\03\82\80\80\80\00\01\00\05\83\80\80\80"
    "\00\01\00\01\0a\8e\80\80\80\00\01\88\80\80\80\00"
    "\00\41\00\fd\01\04\00\0b"
  )
  "alignment must not be larger than natural"
)
(assert_invalid
  (module binary
    "\00\61\73\6d\01\00\00\00\01\85\80\80\80\00\01\60"
    "\00\01\7b\03\82\80\80\80\00\01\00\05\83\80\80\80"
    "\00\01\00\01\0a\8e\80\80\80\00\01\88\80\80\80\00"
    "\00\41\00\fd\02\04\00\0b"
  )
  "alignment must not be larger than natural"
)
(assert_invalid
  (module binary
    "\00\61\73\6d\01\00\00\00\01\85\80\80\80\00\01\60"
    "\00\01\7b\03\82\80\80\80\00\01\00\05\83\80\80\80"
    "\00\01\00\01\0a\8e\80\80\80\00\01\88\80\80\80\00"
    "\00\41\00\fd\03\04\00\0b"
  )
  "alignment must not be larger than natural"
)
(assert_invalid
  (module binary
    "\00\61\73\6d\01\00\00\00\01\85\80\80\80\00\01\60"
    "\00\01\7b\03\82\80\80\80\00\01\00\05\83\80\80\80"
    "\00\01\00\01\0a\8e\80\80\80\00\01\88\80\80\80\00"
    "\00\41\00\fd\04\04\00\0b"
  )
  "alignment must not be larger than natural"
)
(assert_invalid
  (module binary
    "\00\61\73\6d\01\00\00\00\01\85\80\80\80\00\01\60"
    "\00\01\7b\03\82\80\80\80\00\01\00\05\83\80\80\80"
    "\00\01\00\01\0a\8e\80\80\80\00\01\88\80\80\80\00"
    "\00\41\00\fd\05\04\00\0b"
  )
  "alignment must not be larger than natural"
)
(assert_invalid
  (module binary
    "\00\61\73\6d\01\00\00\00\01\85\80\80\80\00\01\60"
    "\00\01\7b\03\82\80\80\80\00\01\00\05\83\80\80\80"
    "\00\01\00\01\0a\8e\80\80\80\00\01\88\80\80\80\00"
    "\00\41\00\fd\06\04\00\0b"
  )
  "alignment must not be larger than natural"
)
(assert_invalid
  (module binary
    "\00\61\73\6d\01\00\00\00\01\85\80\80\80\00\01\60"
    "\00\01\7b\03\82\80\80\80\00\01\00\05\83\80\80\80"
    "\00\01\00\01\0a\8e\80\80\80\00\01\88\80\80\80\00"
    "\00\41\00\fd\07\01\00\0b"
  )
  "alignment must not be larger than natural"
)
(assert_invalid
  (module binary
    "\00\61\73\6d\01\00\00\00\01\85\80\80\80\00\01\60"
    "\00\01\7b\03\82\80\80\80\00\01\00\05\83\80\80\80"
    "\00\01\00\01\0a\8e\80\80\80\00\01\88\80\80\80\00"
    "\00\41\00\fd\08\02\00\0b"
  )
  "alignment must not be larger than natural"
)
(assert_invalid
  (module binary
    "\00\61\73\6d\01\00\00\00\01\85\80\80\80\00\01\60"
    "\00\01\7b\03\82\80\80\80\00\01\00\05\83\80\80\80"
    "\00\01\00\01\0a\8e\80\80\80\00\01\88\80\80\80\00"
    "\00\41\00\fd\09\03\00\0b"
  )
  "alignment must not be larger than natural"
)
(assert_invalid
  (module binary
    "\00\61\73\6d\01\00\00\00\01\85\80\80\80\00\01\60"
    "\00\01\7b\03\82\80\80\80\00\01\00\05\83\80\80\80"
    "\00\01\00\01\0a\8e\80\80\80\00\01\88\80\80\80\00"
    "\00\41\00\fd\0a\04\00\0b"
  )
  "alignment must not be larger than natural"
)
(module definition binary
  "\00\61\73\6d\01\00\00\00\01\8b\80\80\80\00\02\60"
  "\01\7f\01\7b\60\02\7f\7b\00\03\83\80\80\80\00\02"
  "\00\01\05\84\80\80\80\00\01\01\01\01\07\ac\80\80"
  "\80\00\02\12\76\31\32\38\2e\6c\6f\61\64\20\61\6c"
  "\69\67\6e\3d\31\36\00\00\13\76\31\32\38\2e\73\74"
  "\6f\72\65\20\61\6c\69\67\6e\3d\31\36\00\01\0a\9d"
  "\80\80\80\00\02\88\80\80\80\00\00\20\00\fd\00\04"
  "\00\0b\8a\80\80\80\00\00\20\00\20\01\fd\0b\04\00"
  "\0b"
)
(module instance)
(assert_return
  (invoke "v128.load align=16" (i32.const 0x0))
  (v128.const i32x4 0x0 0x0 0x0 0x0)
)
(assert_return
  (invoke "v128.load align=16" (i32.const 0x1))
  (v128.const i32x4 0x0 0x0 0x0 0x0)
)
(assert_return
  (invoke "v128.store align=16"
    (i32.const 0x1)
    (v128.const i32x4 0x403_0201 0x807_0605 0xc0b_0a09 0x100f_0e0d)
  )
)
(assert_return
  (invoke "v128.load align=16" (i32.const 0x0))
  (v128.const i8x16
    0x0
    0x1
    0x2
    0x3
    0x4
    0x5
    0x6
    0x7
    0x8
    0x9
    0xa
    0xb
    0xc
    0xd
    0xe
    0xf
  )
)
(module definition binary
  "\00\61\73\6d\01\00\00\00\01\85\80\80\80\00\01\60"
  "\00\01\7b\03\85\80\80\80\00\04\00\00\00\00\05\83"
  "\80\80\80\00\01\00\01\07\8f\81\80\80\00\04\1d\76"
  "\31\32\38\5f\75\6e\61\6c\69\67\6e\65\64\5f\72\65"
  "\61\64\5f\61\6e\64\5f\77\72\69\74\65\00\00\1b\76"
  "\31\32\38\5f\61\6c\69\67\6e\65\64\5f\72\65\61\64"
  "\5f\61\6e\64\5f\77\72\69\74\65\00\01\25\76\31\32"
  "\38\5f\61\6c\69\67\6e\65\64\5f\72\65\61\64\5f\61"
  "\6e\64\5f\75\6e\61\6c\69\67\6e\65\64\5f\77\72\69"
  "\74\65\00\02\25\76\31\32\38\5f\75\6e\61\6c\69\67"
  "\6e\65\64\5f\72\65\61\64\5f\61\6e\64\5f\61\6c\69"
  "\67\6e\65\64\5f\77\72\69\74\65\00\03\0a\9d\81\80"
  "\80\00\04\a2\80\80\80\00\01\01\7b\41\00\fd\0c\00"
  "\01\02\03\04\05\06\07\08\09\0a\0b\0c\0d\0e\0f\fd"
  "\0b\04\00\41\00\fd\00\04\00\0b\a2\80\80\80\00\01"
  "\01\7b\41\00\fd\0c\00\00\01\00\02\00\03\00\04\00"
  "\05\00\06\00\07\00\fd\0b\01\00\41\00\fd\00\01\00"
  "\0b\a2\80\80\80\00\01\01\7b\41\00\fd\0c\00\00\00"
  "\00\01\00\00\00\02\00\00\00\03\00\00\00\fd\0b\04"
  "\00\41\00\fd\00\01\00\0b\a2\80\80\80\00\01\01\7b"
  "\41\00\fd\0c\00\00\00\00\01\00\00\00\02\00\00\00"
  "\03\00\00\00\fd\0b\01\00\41\00\fd\00\04\00\0b"
)
(module instance)
(assert_return
  (invoke "v128_unaligned_read_and_write")
  (v128.const i8x16
    0x0
    0x1
    0x2
    0x3
    0x4
    0x5
    0x6
    0x7
    0x8
    0x9
    0xa
    0xb
    0xc
    0xd
    0xe
    0xf
  )
)
(assert_return
  (invoke "v128_aligned_read_and_write")
  (v128.const i16x8 0x0 0x1 0x2 0x3 0x4 0x5 0x6 0x7)
)
(assert_return
  (invoke "v128_aligned_read_and_unaligned_write")
  (v128.const i32x4 0x0 0x1 0x2 0x3)
)
(assert_return
  (invoke "v128_unaligned_read_and_aligned_write")
  (v128.const i32x4 0x0 0x1 0x2 0x3)
)
